# kpi_progbase

./: README.md
labs/lab1/: task1.c  task2.c  task3.c  task4.c  КП62_ЛР1_Дзеніка_Данила.docx
labs/lab2/: main.c  КП62_ЛР2_Дзеніка_Данила.docx
labs/lab3/: Sun_Net  assert.c  assert.h  file.c  file.h  function.c  function.h  main.c  menu.c  menu.h  КП62_ЛР3_Дзеніка_Данила.docx
labs/lab4/: CMakeLists.txt  Makefile  input.txt  main.c  new.txt
labs/lab4/include/: convert.h  cui.h  list.h  storage.h
labs/lab4/src/: convert.c  cui.c  list.c  storage.c
labs/lab5/: CMakeLists.txt  Makefile  input.txt  main.c
labs/lab5/include/: test.h
labs/lab5/src/: test.c
labs/lab6/: dialog.cpp  dialog.h  dialog.ui  internetprovider.cpp  internetprovider.h  lab6.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
labs/lab7/: country.cpp  country.h  http.cpp  http.h  lab7.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
tasks/arrays/: main.c
tasks/callback/: CMakeLists.txt  main.c
tasks/console_paint/: main.c
tasks/cpp/: CMakeLists.txt  main.cpp
tasks/cpp/include/: circle.h
tasks/cpp/src/: circle.cpp
tasks/data_repr/: values.txt
tasks/dyn_mem/: main.c
tasks/events/: CMakeLists.txt  main.c
tasks/events/include/: events.h
tasks/events/src/: events.c  list.c
tasks/extra_numeral_systems/: main.c
tasks/files/: main.c
tasks/json/: CMakeLists.txt  main.c
tasks/json/include/: JsonLoader.h  list.h
tasks/json/src/: JsonLoader.c  list.c
tasks/math/: main.c
tasks/matrix_paint/: main.c
tasks/nlp/: main.c  nlp.c  nlp.h  storage.c  storage.h  tmp
tasks/numeral_systems/: results.txt
tasks/qt_windows/: dialog.cpp  dialog.h  dialog.ui  incorrect.cpp  incorrect.h  incorrect.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  qt_windows.pro  taxidriver.cpp  taxidriver.h
tasks/recursion/: main.c
tasks/strings_simple/: main.c
tasks/tcp_client/: CMakeLists.txt  client.c  handler.c  server.c
tasks/tcp_client/include/: request.h  vector.h
tasks/tcp_client/src/: request.c  vector.c
tasks/threads/: CMakeLists.txt  Makefile  main.cpp
tasks/threads/include/: graphics.h
tasks/threads/src/: graphics.cpp
tasks/udp/: CMakeLists.txt  Makefile  client.cpp  server.cpp
tasks/xml/: CMakeLists.txt  main.c
tasks/xml/include/: XmlLoader.h  list.h
tasks/xml/src/: XmlLoader.c
